overflow problem solved

--- a/Shamim/style.css
+++ b/Shamim/style.css
@@ -47,6 +47,7 @@ background-color:white;
     align-items: center;
     /* position: fixed; */
     margin-top: 13px;
+    margin-left: -100px;
     box-shadow: 0px 0px 1px  rgb(84, 83, 83), -0px 0px 1px  rgb(84, 83, 83);
     /* cursor: pointer; */
 
@@ -154,7 +155,7 @@ background-color:white;
         justify-content: center;
         align-items: center;
         position: absolute;
-        top: 25px; 
+        top: 56px; 
         box-shadow: 0px 0px 1px  rgb(84, 83, 83), -0px 0px 1px  rgb(84, 83, 83);
     }
     .gender select{
@@ -176,7 +177,7 @@ background-color:white;
    
    .venue0{
     width: 60vw;
-    height: 390vh;
+    height: 400vh;
     background-color: white;
     border-radius: 5px;
     box-shadow: 0px 0px 1px  rgb(145, 143, 143), -0px 0px 1px  rgb(84, 83, 83);
@@ -372,6 +373,7 @@ background-color:white;
     border-radius: 5px;
     transform: skew(-20deg);
     cursor: pointer;
+    margin-left: 50px;
 }
 .icon1 img{
     height: 20px;
